[gd_scene load_steps=11 format=3 uid="uid://dnximw1ob6xqp"]

[ext_resource type="Script" path="res://UI/textbox_instructions.gd" id="1_n3yrs"]
[ext_resource type="FontFile" uid="uid://bgj17gt6w4fma" path="res://UI/fonts/Connection.otf" id="1_uaaqx"]
[ext_resource type="Texture2D" uid="uid://to86mfjqymhc" path="res://imgs/Over.jpg" id="3_x0bsd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3p4e"]
bg_color = Color(0.172549, 0.172549, 0.172549, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1sqh1"]
bg_color = Color(0.439216, 0.0666667, 0.105882, 1)
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4tx1h"]
bg_color = Color(0.705882, 0.137255, 0.196078, 1)
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_avpdh"]
bg_color = Color(0.376471, 0.0509804, 0.0862745, 1)
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_1kpra"]
Button/styles/hover = SubResource("StyleBoxFlat_1sqh1")
Button/styles/normal = SubResource("StyleBoxFlat_4tx1h")
Button/styles/pressed = SubResource("StyleBoxFlat_avpdh")

[sub_resource type="Theme" id="Theme_u464y"]
Button/styles/hover = SubResource("StyleBoxFlat_1sqh1")
Button/styles/normal = SubResource("StyleBoxFlat_4tx1h")
Button/styles/pressed = SubResource("StyleBoxFlat_avpdh")

[sub_resource type="SystemFont" id="SystemFont_g306t"]
font_names = PackedStringArray("Century Gothic")

[node name="Textbox" type="CanvasLayer"]
script = ExtResource("1_n3yrs")

[node name="TextboxContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 61.0
offset_top = -212.0
offset_right = -50.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q3p4e")

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
layout_mode = 2

[node name="Start" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_uaaqx")
theme_override_font_sizes/font_size = 35
text = "* "

[node name="Label" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_uaaqx")
theme_override_font_sizes/font_size = 35
autowrap_mode = 2
clip_text = true

[node name="End" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uaaqx")
theme_override_font_sizes/font_size = 35
text = "v"

[node name="UIPausa" type="TextEdit" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UIPausa"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.392157, 0.478431, 0.639216)

[node name="CenterContainer" type="CenterContainer" parent="UIPausa"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UIPausa/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Reanudar_Button" type="Button" parent="UIPausa/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1kpra")
theme_override_fonts/font = ExtResource("1_uaaqx")
theme_override_font_sizes/font_size = 40
text = "REANUDAR  "

[node name="Reiniciar_Button" type="Button" parent="UIPausa/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1kpra")
theme_override_fonts/font = ExtResource("1_uaaqx")
theme_override_font_sizes/font_size = 40
text = " REINICIO  "

[node name="Terminar_Button" type="Button" parent="UIPausa/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_u464y")
theme_override_fonts/font = ExtResource("1_uaaqx")
theme_override_font_sizes/font_size = 40
text = " TERMINAR"

[node name="Label" type="Label" parent="UIPausa"]
layout_mode = 0
offset_left = 431.0
offset_top = 25.0
offset_right = 731.0
offset_bottom = 65.0
theme_override_fonts/font = ExtResource("1_uaaqx")
theme_override_font_sizes/font_size = 40
text = "MENU DE PAUSA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="UIPausa/Label"]
layout_mode = 0
offset_left = -83.0
offset_top = 87.0
offset_right = 217.0
offset_bottom = 131.0
theme_override_fonts/font = SubResource("SystemFont_g306t")
theme_override_font_sizes/font_size = 35
text = "Tu objetivo es: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="UIFinal" type="TextEdit" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UIFinal"]
self_modulate = Color(1, 1, 1, 0.486275)
show_behind_parent = true
layout_mode = 0
offset_left = 4.0
offset_top = 1.0
offset_right = 1146.0
offset_bottom = 643.0
texture = ExtResource("3_x0bsd")

[node name="Tolerancia" type="Label" parent="UIFinal"]
layout_mode = 0
offset_left = 343.0
offset_top = 214.0
offset_right = 829.0
offset_bottom = 350.0
text = "Tu puntuacion es de: "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UIPausa/CenterContainer/VBoxContainer/Reanudar_Button" to="." method="_on_reanudar_button_pressed"]
[connection signal="pressed" from="UIPausa/CenterContainer/VBoxContainer/Reiniciar_Button" to="." method="_on_reiniciar_button_pressed"]
[connection signal="pressed" from="UIPausa/CenterContainer/VBoxContainer/Terminar_Button" to="." method="_on_terminar_button_pressed"]
